# panda_simulation

./: CMakeLists.txt  README.md  package.xml
config/: panda_control.yaml
launch/: simulation.launch
objects/: bar_clamp_1.urdf
objects/urdf/: banana.urdf  bar_clamp.urdf  cleanser.urdf  cracker_box.urdf  gelatin.urdf  meat_can.urdf  pear.urdf  strawberry.urdf
src/: robot_state_initializer.cpp
world/: bar_clamp.dae  franka.world
